commit ajustes front e resp

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
             <img src="src/assets/Juicy logo BRANCO VERDE.png" alt="">
         </div>
         <div class="header-img">
-            <h1>Just <span>Green</span></h1>
-            <p>Bem vindo ao jogo</p>
-            <button>Telegram Free Tips <i class="bi bi-telegram"></i></button>
+            <h1>Juicy Tips</h1>
+            <p class="p1">As Tips Mais Suculentas do Mercado</p>
+            <button class="btn-pulse">Entrar no Grupo Free <i class="bi bi-telegram"></i></button>
+            <p class="p2">Vem Pro Telegram!</p>
+
         </div>
     </header>
     
