--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
         <div class="header-img">
             <h1>Juicy Tips</h1>
             <p class="p1">As Tips Mais Suculentas do Mercado</p>
-            <button class="btn-pulse">Entrar no Grupo Free <i class="bi bi-telegram"></i></button>
+            <button id="btnTelegram" class="btn-pulse">Entrar no Grupo Free <i class="bi bi-telegram"></i></button>
             <p class="p2">Vem Pro Telegram!</p>
 
         </div>
     </header>
     
+    <script src="src/js/script.js"></script>
 </body>
 </html>
